# UWr

./: README.md
Algorytmy i struktury danych/2017_A/: main.cpp
Algorytmy i struktury danych/2017_B/: main.cpp
Analiza numeryczna/Lista 9/: 8.java
Analiza numeryczna/Lista4/: zad3.cpp  zad456.cpp
Analiza numeryczna/Lista5/: anl5z9.cpp  l5z8.cpp
Bazy danych/: bazydanych3.sql  sprawdzian_1.sql  sprawdzian_2.sql  sprawdzian_3.sql
Hans++/Lista2/: main  main.cpp  rational.cpp  rational.h
Kurs C++/Zad1/: main.cpp
Kurs C++/Zad11a/: CMakeLists.txt  Imiona.txt  Imiona2.txt  main.cpp  osoba.h
Kurs C++/Zad11d/: CMakeLists.txt  main.cpp
Kurs C++/Zad11e/: CMakeLists.txt  main.cpp
Kurs C++/Zad2/: main.cpp  prosta.cpp  prosta.h  punkt.cpp  punkt.h  wektor.cpp  wektor.h
Kurs C++/Zad3/: main.cpp  stos.cpp  stos.h
Kurs C++/Zad4/: list.cpp  list.h  main.cpp
Kurs C++/Zad5/: main.cpp  wielomian.cpp  wielomian.h
Kurs C++/Zad6/: CMakeLists.txt  bezwgledna.cpp  bezwgledna.h  cosinus.cpp  cosinus.h  dodaj.cpp  dodaj.h  e.cpp  e.h  exp.cpp  exp.h  log.cpp  log.h  lognat.cpp  lognat.h  main.cpp  modulo.cpp  modulo.h  odejmij.cpp  odejmij.h  odwrotna.cpp  odwrotna.h  operator0arg.cpp  operator0arg.h  operator1arg.cpp  operator1arg.h  operator2arg.cpp  operator2arg.h  pi.cpp  pi.h  podziel.cpp  podziel.h  pomnoz.cpp  pomnoz.h  potega.cpp  potega.h  przeciwna.cpp  przeciwna.h  sinus.cpp  sinus.h  (+6 more)
Kurs C++/Zad7/: main.cpp  wymierna.cpp  wymierna.h
Kurs C++/Zad9/: PlikWejsciowy.cpp  PlikWejsciowy.h  PlikWyjsciowy.cpp  PlikWyjsciowy.h  (+4 more)
Metody programowania/: README.md
(+491 files in other folders)
